fix: prevent overlapping of carousel slides in Safari for landing page hero section.

--- a/src/routes/LandingPage/HeroSection/index.less
+++ b/src/routes/LandingPage/HeroSection/index.less
@@ -4,15 +4,12 @@
   justify-content: space-between;
   white-space: wrap;
 
-  .hero-heading {
-    width: 75%;
-  }
-
   .hero-item {
     display: flex;
     justify-content: center;
     width: 50%;
     padding: 1rem 0rem;
+    white-space: normal;
 
     h1 {
       margin-bottom: 1.5rem;
